--- a/app/src/main/res/layout/activity_sign_up_.xml
+++ b/app/src/main/res/layout/activity_sign_up_.xml
@@ -46,6 +46,7 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:id="@+id/viewpager"
+        android:scrollIndicators="none"
         tools:layout_editor_absoluteX="8dp"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
