--- a/app/src/main/res/layout/fragment_seller_fragment.xml
+++ b/app/src/main/res/layout/fragment_seller_fragment.xml
@@ -163,8 +163,8 @@
                 android:id="@+id/cardview_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 app:cardBackgroundColor="#e6e6e5"
+                android:layout_weight="2"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="3dp">
                 <android.support.design.widget.TextInputLayout
@@ -183,7 +183,6 @@
                         android:gravity="center|start"
                         android:hint="Mobile*"
                         android:inputType="number"
-                        android:text="+91"
                         android:textColor="#000"
                         android:textSize="16sp"
                         android:maxLines="1"
@@ -191,6 +190,8 @@
                         android:scrollHorizontally="true"/>
                 </android.support.design.widget.TextInputLayout>
             </android.support.v7.widget.CardView>
+
+
             <android.support.v7.widget.CardView
 
                 android:layout_width="match_parent"
