--- a/app/src/main/res/layout/fragment_offline_fragment1.xml
+++ b/app/src/main/res/layout/fragment_offline_fragment1.xml
@@ -174,15 +174,17 @@
         android:text="@string/total_gross"
         android:textAppearance="@style/heading1"
         android:lineSpacingExtra="8sp"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal|center_vertical"
         />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/total"
+            android:textStyle="bold"
+            android:layout_marginRight="30dp"
             android:layout_alignParentRight="true"
-            android:textAppearance="@style/heading1"
+            android:textAppearance="@style/heading"
             android:lineSpacingExtra="8sp"
             android:gravity="center_vertical"
             />
@@ -196,7 +198,7 @@
         android:layout_alignParentBottom="true"
         android:textSize="15dp"
         android:background="@color/Text"
-        android:hint="PLACE ORDER"
+        android:hint="Next"
         android:textColorHint="@color/white"/>
 
 
