--- a/app/src/main/res/layout/fragment2_cardlayout.xml
+++ b/app/src/main/res/layout/fragment2_cardlayout.xml
@@ -55,7 +55,10 @@
             android:fontFamily="@font/catamaran"
             android:layout_marginBottom="4dp"/>
 
-        <RelativeLayout
+</LinearLayout>
+
+    </android.support.v7.widget.CardView>
+      <!--  <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="25dp"
            >
@@ -68,7 +71,7 @@
                 android:text="  ADD TO BAG"
                 android:fontFamily="@font/catamaran"
                 android:textAlignment="center"
-                android:textColor="@color/colorBottomNavigationInactive" />
+                android:textColor="@color/colorBottomNavigationInactive" />-->
 <!--
             <ToggleButton
                 android:id="@+id/button_favorite"
@@ -83,9 +86,6 @@
                 android:text=""
                 android:textOff=""
                 android:textOn="" />-->
-        </RelativeLayout>
 
 
-    </LinearLayout>
 
-</android.support.v7.widget.CardView>
