--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/gallery"
         >
-        <LinearLayout
+      <!--  <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -113,12 +113,12 @@
                 android:textColor="#000"
                 android:textSize="16sp" />
 
-           <!-- <CheckBox
+           &lt;!&ndash; <CheckBox
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Advance"
                android:layout_gravity="center"
-                android:layout_weight="1"/>-->
+                android:layout_weight="1"/>&ndash;&gt;
         </LinearLayout>
     </LinearLayout>
 
@@ -155,12 +155,12 @@
                 android:textColor="#000"
                 android:textSize="16sp" />
 
-          <!--  <CheckBox
+          &lt;!&ndash;  <CheckBox
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Rate Cut"
-                android:layout_weight="1"/>-->
+                android:layout_weight="1"/>&ndash;&gt;
         </LinearLayout>
     </LinearLayout>
 
@@ -186,7 +186,7 @@
               android:id="@+id/rate"
               android:text="Rate Cut"
               android:layout_weight="1"/>
-    </LinearLayout>
+    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -203,6 +203,6 @@
     </LinearLayout>
 
 </LinearLayout>
-
+</LinearLayout>
 
 
