--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,26 +8,24 @@
     android:padding="16dp">
 
 
-
-
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/filter_text"
         android:fontFamily="@font/catamaran"
-        android:text="FILTERS "/>
+        android:text="FILTERS "/>-->
 
 
 
 
-    <RelativeLayout
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:id="@+id/list"
-        android:layout_below="@+id/filter_text"
+
         android:layout_above="@+id/buttons"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         >
@@ -39,15 +37,16 @@
             android:id="@+id/expand">
 
         </ExpandableListView>
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttons"
         android:orientation="horizontal"
-        android:layout_margin="25dp"
-         android:layout_below="@+id/list"
+
+
+        android:layout_alignParentBottom="true"
         android:weightSum="4">
 
         <Button
@@ -73,5 +72,5 @@
             android:layout_marginLeft="2dp"
             android:background="@drawable/simpple_button"
             android:layout_weight="2"/>
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
