--- a/app/src/main/res/layout/fragment_dropdown_fragment.xml
+++ b/app/src/main/res/layout/fragment_dropdown_fragment.xml
@@ -151,20 +151,19 @@
 
 
 
-               <!-- <TextView
+                <TextView
                     android:id="@+id/hint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#e6e6e5"
-                    android:gravity="center|start"
-                    android:hint="Net Wt :"
+                    android:layout_marginLeft="15sp"
+                    android:hint="Grs. Wt :"
+                    android:padding="5dp"
                     android:inputType="numberDecimal"
-                    android:padding="2dp"
-                    android:maxLines="1"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:textColor="#000"
-                    android:textSize="16sp" />-->
+                    android:textSize="16sp" />
 
 
 
@@ -174,25 +173,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="2dp"
-                    android:layout_weight="2"
-                  android:textAlignment="center"
+                   android:layout_alignParentRight="true"
                     android:background="#e6e6e5"
-                    android:hint="Gross Weight(Gms) *"
+                   android:layout_marginRight="15dp"
                     android:inputType="numberDecimal"
                     android:maxLines="1"
-                   android:layout_centerInParent="true"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
-                <Spinner
+              <!--  <Spinner
                     android:id="@+id/avail_spinner"
                     android:layout_width="35dp"
                    android:layout_alignParentEnd="true"
                     android:layout_height="match_parent"
                     >
 
-                </Spinner>
+                </Spinner>-->
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     <!--    <android.support.v7.widget.CardView
