--- a/app/src/main/res/layout/fragment_offline_fragment1.xml
+++ b/app/src/main/res/layout/fragment_offline_fragment1.xml
@@ -167,15 +167,14 @@
         android:gravity="bottom"
         android:layout_above="@+id/place_button">
 
-    <TextView
-        android:id="@+id/total_gross"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_gross"
-        android:textAppearance="@style/heading1"
-        android:lineSpacingExtra="8sp"
-        android:gravity="center_horizontal|center_vertical"
-        />
+        <TextView
+            android:id="@+id/total_gross"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="8sp"
+            android:layout_marginTop="3dp"
+            android:text="@string/total_gross"
+            android:textAppearance="@style/heading1" />
 
         <TextView
             android:layout_width="wrap_content"
