--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="white">#ffffffff</color>
     <color name="black">#000000</color>
     <color name="yellow">#fff5f504</color>
-    <color name="red">#B71C1C</color>
+    <color name="red">#F83D37</color>
     <color name="graph">#F18177</color>
 
     <color name="black_overlay">#66000000</color>
