--- a/app/src/main/res/layout/fragment_signup_.xml
+++ b/app/src/main/res/layout/fragment_signup_.xml
@@ -313,6 +313,44 @@
                         android:fontFamily="@font/roboto_italic"/>
                 </android.support.design.widget.TextInputLayout>
             </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="#e6e6e5"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="3dp">
+
+                <android.support.design.widget.TextInputLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:fontFamily="@font/roboto_italic"
+                    android:textSize="15sp"
+                    android:textStyle="italic">
+
+                    <EditText
+                        android:id="@+id/confir_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_margin="3dp"
+                        android:background="#e6e6e5"
+                        android:fontFamily="@font/roboto_italic"
+                        android:gravity="center|start"
+                        android:hint="Confirm Password*"
+                        android:inputType="textPassword"
+                        android:maxLength="30"
+                        android:maxLines="1"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:textColor="#000"
+                        android:textSize="14sp" />
+                </android.support.design.widget.TextInputLayout>
+            </android.support.v7.widget.CardView>
 
 
 
@@ -348,7 +386,7 @@
         android:layout_height="wrap_content"
         android:text="I ACCEPT Ordofy terms and policy"
         android:textColor="@color/white"
-        android:background="#275191"
+        android:background="@color/Text"
         android:layout_gravity="bottom|end"
          />
     </LinearLayout>
