--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -2,14 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item
-        android:icon="@drawable/empty"
-        android:title="cart"
-        android:id="@+id/blue"
+        android:icon="@drawable/ic_edit_black_24dp"
+        android:title="edit"
+        android:id="@+id/edit_icon"
         android:visible="true"
         app:showAsAction="always"></item>
-
-
 
 </menu>
