--- a/app/src/main/res/layout/fragment_dropdown_fragment.xml
+++ b/app/src/main/res/layout/fragment_dropdown_fragment.xml
@@ -171,10 +171,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
-                    android:background="#e6e6e5"
                     android:layout_marginRight="15dp"
                     android:inputType="numberDecimal"
                     android:maxLines="1"
+                   android:background="@null"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:textColor="@color/black"
