--- a/app/src/main/res/layout/activity_check_out__.xml
+++ b/app/src/main/res/layout/activity_check_out__.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-xmlns:app="http://schemas.android.com/apk/res-auto"
 tools:context=".Activity.Check_out__Activity">
 
 <LinearLayout
@@ -77,3 +79,4 @@ tools:context=".Activity.Check_out__Activity">
     </LinearLayout>
 
 </RelativeLayout>
+</layout>
