--- a/app/src/main/res/layout/activity_custom_order_search_and_category_.xml
+++ b/app/src/main/res/layout/activity_custom_order_search_and_category_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -8,15 +8,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".Activity.Seller_Order_History">
 
-<android.support.design.widget.AppBarLayout
-    android:id="@+id/appBarLayout"
-    android:layout_width="match_parent"
-    android:focusableInTouchMode="true"
-    android:elevation="10dp"
-    android:focusedByDefault="false"
-    style="@style/Theme.AppCompat.NoActionBar"
-    android:layout_height="wrap_content"
-    >
+
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -32,10 +24,12 @@ tools:context=".Activity.Seller_Order_History">
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.SearchView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:searchIcon="@drawable/ic_search_black_24dp"
+                app:searchIcon="@null"
                 android:id="@+id/custom_search"
+                app:searchHintIcon="@null"
+                app:iconifiedByDefault="false"
                 android:layout_alignParentRight="true"
                 app:defaultQueryHint="Search product"
                 android:layout_alignParentEnd="true"
@@ -47,12 +41,13 @@ tools:context=".Activity.Seller_Order_History">
 
     </android.support.v7.widget.Toolbar>
 
-</android.support.design.widget.AppBarLayout>
+
 
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_below="@+id/search_tool"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:orientation="vertical">
 
@@ -65,4 +60,4 @@ tools:context=".Activity.Seller_Order_History">
 
     </FrameLayout>
 </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
