--- a/app/src/main/res/layout/activity_customize__order.xml
+++ b/app/src/main/res/layout/activity_customize__order.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
+
 android:layout_width="match_parent"
 android:orientation="vertical"
+    android:id="@+id/customizeView"
 android:background="@color/white"
 android:layout_height="match_parent"
 tools:context=".Activity.Customize_Order">
@@ -58,3 +61,4 @@ tools:context=".Activity.Customize_Order">
  </LinearLayout>
 
 </RelativeLayout>
+</layout>
