--- a/app/src/main/res/layout/activity_offline_order.xml
+++ b/app/src/main/res/layout/activity_offline_order.xml
@@ -1,56 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
+
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.Seller_Order_History">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:focusableInTouchMode="true"
-        android:elevation="10dp"
-        android:focusedByDefault="false"
-        style="@style/Theme.AppCompat.NoActionBar"
-        android:layout_height="wrap_content"
-        >
+
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:id="@+id/offline_tool"
             android:layout_height="45dp"
-            android:elevation="10dp"
             app:titleTextColor="@color/white"
             android:background="@color/Text"
             android:theme="@style/Toolbar_Arrow"
-            android:layout_gravity="center"
             android:textAlignment="center">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.v7.widget.SearchView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:searchIcon="@drawable/ic_search_black_24dp"
                     android:id="@+id/custom_search"
+                    app:showAsAction="never"
+                    app:searchHintIcon="@null"
+                    app:searchIcon="@null"
+                    app:actionViewClass="android.support.v7.widget.SearchView"
                     android:layout_alignParentRight="true"
                     app:defaultQueryHint="ENTER NAME OR SKU"
-                    android:layout_alignParentEnd="true"
                     >
-
                 </android.support.v7.widget.SearchView>
             </RelativeLayout>
-
         </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/offline_tool"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:orientation="vertical">
         <FrameLayout
@@ -63,4 +52,5 @@
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
+</layout>
