--- a/app/src/main/res/layout/fragment_view_settings.xml
+++ b/app/src/main/res/layout/fragment_view_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.ViewSettingsFragment">
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -41,42 +41,47 @@
 
         </LinearLayout>
         </LinearLayout>
+    </android.support.v7.widget.CardView>-->
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:elevation="5dp"
+        android:background="@color/white"
+        android:layout_marginTop="20dp">
 
-    </android.support.v7.widget.CardView>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/zoom_card"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="16dp"
-        android:paddingHorizontal="20dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
+
             android:orientation="horizontal"
             android:weightSum="5">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Home Page Sliders"
                 android:textColor="#24406A"
+                android:gravity="center_vertical"
                 android:layout_weight="4"
+                android:layout_marginLeft="2dp"
                 android:fontFamily="@font/roboto_light"/>
             <ImageButton
                 android:id="@+id/add_slider_btn"
-                android:layout_width="20dp"
-                android:layout_height="15dp"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:background="@drawable/add_gray"/>
         </LinearLayout>
-
-
-
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/slider_recyclerview"
@@ -84,11 +89,11 @@
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:isScrollContainer="true"
-            tools:itemCount="30" />
+            tools:itemCount="20" />
 
 
     </LinearLayout>
 
-
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
