--- a/app/src/main/res/layout/slider_add_view.xml
+++ b/app/src/main/res/layout/slider_add_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,7 +12,17 @@
             android:layout_width="match_parent"
             android:layout_height="165dp"
             >
-            <!--160-->
+            <Button
+                android:id="@+id/slider_cancle_btn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="end"
+
+                android:background="@drawable/clear_btn"
+                android:layout_margin="6dp"
+                />
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/iv_card"
                 android:layout_width="match_parent"
@@ -20,17 +30,13 @@
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:padding="2dp"
-                android:scaleType="fitCenter">
+                android:nestedScrollingEnabled="false"
+                app:layout_collapseMode="parallax"
+                android:scaleType="fitXY"
+                app:layout_scrollFlags="scroll|enterAlways"
+                >
             </android.support.v7.widget.AppCompatImageView>
-            <Button
-                android:id="@+id/button_wish"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="end"
-                android:background="@drawable/clear_btn"
-                android:layout_margin="6dp"
-                />
+
         </FrameLayout>
     </LinearLayout>
 
