Cart and update changes

--- a/app/src/main/res/layout/activity_buyer__custome__order.xml
+++ b/app/src/main/res/layout/activity_buyer__custome__order.xml
@@ -12,32 +12,17 @@ xmlns:tools="http://schemas.android.com/tools">
 
 
     <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
         android:id="@+id/customtool"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
-        app:titleTextColor="@color/white"
         android:background="@color/Text"
+        android:textAlignment="center"
         android:theme="@style/Toolbar_Arrow"
-        android:textAlignment="center">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <android.support.v7.widget.SearchView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/custom_search"
-                app:showAsAction="never"
-                app:searchHintIcon="@null"
-                app:searchIcon="@null"
-                app:actionViewClass="android.support.v7.widget.SearchView"
-                android:layout_alignParentRight="true"
-                app:defaultQueryHint="ENTER NAME OR SKU"
-                >
-            </android.support.v7.widget.SearchView>
-        </RelativeLayout>
+        app:title="Custom Order"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:titleTextColor="@color/white">
     </android.support.v7.widget.Toolbar>
-
-        <FrameLayout
+       <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/customtool"
