--- a/app/src/main/res/layout/activity_add_new_product_activity.xml
+++ b/app/src/main/res/layout/activity_add_new_product_activity.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
     android:id="@+id/parent_layout"
+    android:focusedByDefault="false"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
 xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activity.Add_new_product_activity">
 
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+
+
+</FrameLayout>
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -25,14 +32,24 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
     </android.support.v7.widget.Toolbar>
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/submit"
+        android:background="@color/Text"
+        android:layout_alignParentBottom="true"
+        android:fontFamily="@font/catamaran"
+        android:textColor="@color/white"
+        android:text="Submit"/>
+
 <ScrollView
     android:id="@+id/scrollber"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:fitsSystemWindows="true"
+    android:focusedByDefault="false"
+    android:focusableInTouchMode="true"
     android:layout_below="@+id/tool_bar"
-    android:layout_above="@+id/done_btn">
+    android:layout_above="@+id/submit">
 
 
     <LinearLayout
@@ -40,6 +57,8 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:focusedByDefault="false"
+        android:focusableInTouchMode="true"
         android:padding="20dp">
 
 
@@ -162,7 +181,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_weight="2"
                     android:background="@drawable/pricebreak_background"
                     android:inputType="text"
-                    android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:textColor="#000"
                     android:textSize="16sp" />
@@ -190,7 +208,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_weight="2"
                 android:background="@drawable/pricebreak_background"
                 android:inputType="text"
-                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textColor="#000"
                 android:textSize="16sp" />
@@ -219,7 +236,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_weight="2"
                 android:background="@drawable/pricebreak_background"
                 android:inputType="text"
-                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textColor="#000"
                 android:textSize="16sp" />
@@ -247,7 +263,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_weight="2"
                 android:background="@drawable/pricebreak_background"
                 android:inputType="text"
-                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textColor="#000"
                 android:textSize="16sp" />
@@ -276,7 +291,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_weight="2"
                 android:background="@drawable/pricebreak_background"
                 android:inputType="text"
-                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textColor="#000"
                 android:textSize="16sp" />
@@ -373,6 +387,38 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 
             </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1.2"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Inventory Type"
+                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@drawable/pricebreak_background"
+                android:orientation="vertical">
+
+                <Spinner
+
+                    android:id="@+id/inventry_spinn"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:textAlignment="center"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -619,16 +665,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:text="Add Stone Details"/>
 
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:id="@+id/submit"
-                android:background="@drawable/round_corners"
-              android:layout_gravity="center"
-                android:layout_margin="4dp"
-                android:fontFamily="@font/catamaran"
-                android:textColor="@color/white"
-                android:text="Submit"/>
+
 
             <ProgressBar
                 android:id="@+id/prgLoading"
@@ -636,16 +673,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_height="match_parent"
                 android:visibility="gone"
                 style="@android:style/Widget.ProgressBar.Small.Inverse"
-                android:layout_gravity="center"/>
+
+               />
 
 
         </LinearLayout>
 
     </LinearLayout>
 
-
-
-
-
 </ScrollView>
-</LinearLayout>
+</RelativeLayout>
