--- a/app/src/main/res/layout/activity_cart_.xml
+++ b/app/src/main/res/layout/activity_cart_.xml
@@ -56,9 +56,10 @@
                         android:layout_width="wrap_content"
                         android:padding="8dp"
                         android:id="@+id/text"
+                        style="@style/heading"
                         android:fontFamily="@font/catamaran"
                         android:layout_height="wrap_content"
-                        android:text="ESTIMATED TOTAL WEIGHT ="/>
+                        android:text="ESTIMATED TOTAL WEIGHT  ="/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -66,6 +67,7 @@
                         android:id="@+id/total_weight"
                         android:layout_centerInParent="true"
                         android:layout_toEndOf="@+id/text"
+                         style="@style/Total_weight"
                         android:layout_height="wrap_content"
                         android:text="ESTIMATED TOTAL	"/>
                 </LinearLayout>
@@ -110,8 +112,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         >
-
-
 
         <ProgressBar
             android:layout_width="match_parent"
