--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -144,6 +144,41 @@
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+
+        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+         android:layout_marginVertical="16dp"
+        android:layout_height="40dp"
+        app:cardBackgroundColor="#fff"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="30dp"
+        app:cardElevation="6dp">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            >
+            <TextView
+                android:id="@+id/password_setting"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="UPDATE PASSWORD"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:pointerIcon="arrow"
+                />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/forward" />
+        </FrameLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 
 </LinearLayout>
