--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -111,32 +111,23 @@
                         android:layout_marginTop="15dp"
                         android:id="@+id/relative"
                         android:layout_marginBottom="15dp">
-                        <!--<com.google.android.material.chip.ChipGroup
-                            android:id="@+id/chipGroup"
-                            android:layout_width="0dp"
+                        <com.example.compaq.b2b_application.chips_package.RecipientEditTextView
+                            android:id="@+id/tag_input"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="24dp"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginEnd="24dp"
+                            android:background="@null"
+                            android:hint="Enter user classes"
+                            android:padding="16dp"
+                            android:scrollbars="vertical"
+                            android:textAllCaps="false"
+                            android:textSize="16sp"
+                            app:chipBackground="@drawable/chip_background_drawable"
+                            app:chipBackgroundPressed="@drawable/chip_background_drawable_pressed"
+                            app:chipDelete="@drawable/baseline_cancel_white_48dp"
+                            app:chipIcon="@drawable/ic_contact_picture"
                             >
 
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/chip6"
-                            style="@style/Widget.MaterialComponents.Chip.Filter"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Fire" />
-                        </com.google.android.material.chip.ChipGroup>-->
-
-
-                        <!--<com.google.android.material.chip.Chip
-                            android:id="@+id/chip"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Chip" />-->
-
-
-
+                        </com.example.compaq.b2b_application.chips_package.RecipientEditTextView>
 
 
                     </LinearLayout>
