--- a/app/src/main/res/layout/doc_inage.xml
+++ b/app/src/main/res/layout/doc_inage.xml
@@ -2,29 +2,31 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:minHeight="200dp"
-        android:minWidth="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
        >
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!--<ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+       <ImageView
             android:id="@+id/cancle_img"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="right"
-            android:layout_margin="15dp"
+            android:layout_margin="5dp"
             android:translationZ="2dp"
-            android:background="@drawable/ic_cancel_black_24dp" />-->
+            android:background="@drawable/ic_cancel_black_24dp" />
         <ImageView
             android:id="@+id/doc_image"
             android:layout_width="match_parent"
             android:layout_gravity="center"
+            android:minHeight="500dp"
+            android:minWidth="500dp"
+            android:padding="5dp"
             android:layout_height="match_parent" />
 
     </FrameLayout>
