--- a/app/src/main/res/layout/fragment_company_profile_.xml
+++ b/app/src/main/res/layout/fragment_company_profile_.xml
@@ -137,6 +137,7 @@
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:text="UPLOAD GSTIN"
+               android:clickable="false"
                />
     <android.support.v7.widget.CardView
 
@@ -239,6 +240,7 @@
             android:textColor="@color/white"
             android:background="@color/Text"
             android:layout_gravity="bottom|end"
+            android:visibility="gone"
             />
     </LinearLayout>
 </RelativeLayout>
